# QT

./: .gitignore  CMakeLists.txt  Icons.qrc  clementine.cpp  clementine.h  clementine.ui  main.cpp
